--- a/EpiAlloyPowerBI/EpiAlloyPowerBI.csproj
+++ b/EpiAlloyPowerBI/EpiAlloyPowerBI.csproj
@@ -315,6 +315,7 @@
     <Compile Include="Helpers\CategorizableExtensions.cs" />
     <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Helpers\UrlHelpers.cs" />
+    <Compile Include="Models\Blocks\AsyncBlockController.cs" />
     <Compile Include="Models\Blocks\ButtonBlock.cs" />
     <Compile Include="Models\Blocks\ContactBlock.cs" />
     <Compile Include="Models\Blocks\EditorialBlock.cs" />
