--- a/EpiAlloyPowerBI/EpiAlloyPowerBI.csproj
+++ b/EpiAlloyPowerBI/EpiAlloyPowerBI.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Business\PageContextActionFilter.cs" />
     <Compile Include="Business\PageTypeExtensions.cs" />
     <Compile Include="Business\PageViewContextFactory.cs" />
+    <Compile Include="Business\PowerBI\OAuthResult.cs" />
     <Compile Include="Business\Rendering\AlloyContentAreaRenderer.cs" />
     <Compile Include="Business\Rendering\ErrorHandlingContentRenderer.cs" />
     <Compile Include="Business\Rendering\IContainerPage.cs" />
