--- a/EpiAlloyPowerBI/Web.config
+++ b/EpiAlloyPowerBI/Web.config
@@ -20,7 +20,15 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="GlobalNewsContainerID" value="" />
-
+    <add key="clientId" value="" />
+    <add key="groupId" value="" />
+    <add key="reportId" value="" />
+    <add key="pbiUsername" value="" />
+    <add key="pbiPassword" value="" />
+    <add key="authorityUrl" value="https://login.microsoftonline.com/common/oauth2/authorize" />
+    <add key="resourceUrl" value="https://analysis.windows.net/powerbi/api" />
+    <add key="apiUrl" value="https://api.powerbi.com" />
+    <add key="embedUrlBase" value="https://app.powerbi.com" />
   </appSettings>
 
   <system.web>
